linux-config/etc/iptables/rules.v4
*nat
-A POSTROUTING -o WAN -j MASQUERADE
COMMIT

*filter
-A INPUT -i lo -j ACCEPT
# Allow ssh, so that we do not lock ourselves out
-A INPUT -i WAN -p tcp -m tcp --dport 22 -j ACCEPT
# Allow incoming traffic for the outgoing connections to router
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Block everything else incoming to router
-A INPUT -i WAN -j DROP

# Forward traffic between internal wired & wirless networks
-A FORWARD -i LAN -o WLAN -j ACCEPT
-A FORWARD -i WLAN -o LAN -j ACCEPT
# Allow incoming traffic for the outgoing connections to rest of network
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
